# xl-cli

./: CLAUDE.md  CLI-MANIFEST.md  README.md  REPORT.md  plan.md  pyproject.toml  xl-agent-cli-prd.md
.claude/: settings.local.json
.claude/skills/improve-skill/: SKILL.md
.claude/skills/improve-skill/references/: skillsbench-findings.md
.claude/skills/xl-expert/: SKILL.md
.claude/skills/xl-expert/references/: commands.md  errors.md  patterns.md  workflows.md
.github/: copilot-instructions.md
.github/workflows/: pypi.yml
docs/: agent-guide.md
examples/: xl-policy.yaml
examples/plans/: add-column.json  append-rows.json
examples/workflows/: add-column-workflow.yaml  inspect-and-validate.yaml
src/xl/: __init__.py  cli.py
src/xl/adapters/: __init__.py  openpyxl_engine.py
src/xl/adapters/recalc/: __init__.py
src/xl/contracts/: __init__.py  common.py  plans.py  responses.py  workflow.py
src/xl/diff/: differ.py
src/xl/engine/: __init__.py  context.py  dispatcher.py  verify.py  workflow.py
src/xl/help/: __init__.py  custom_types.py  extractor.py  toon.py
src/xl/io/: fileops.py
src/xl/observe/: events.py
src/xl/server/: stdio.py
src/xl/validation/: __init__.py  policy.py  validators.py
tests/: conftest.py  test_adapter.py  test_cli.py  test_concurrency.py  test_context.py  test_contracts.py  test_exit_codes.py  test_golden.py  test_io.py  test_llm_help.py  test_performance.py  test_phase3.py  test_phase4.py  test_phase5.py  test_property.py  test_report_fixes.py  test_token_savings.py  test_toon.py  test_validation.py
tests/fixtures/: create_golden_workbooks.py
tests/fixtures/workbooks/: golden_empty.xlsx  golden_formulas.xlsx  golden_hidden_sheets.xlsx  golden_multi_table.xlsx  golden_sales.xlsx
