[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xl-agent-cli"
version = "1.1.0"
description = "Agent-first CLI for Excel workbooks"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Thomas Rohde" },
]
dependencies = [
    "openpyxl>=3.1",
    "typer>=0.12",
    "pydantic>=2.0",
    "orjson>=3.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "portalocker>=2.8",
    "xxhash>=3.4",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.98",
]

[project.scripts]
xl = "xl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/xl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
