[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xl-agent-cli"
version = "1.6.0"
description = "Agent-first CLI for Excel workbooks"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Thomas Rohde" },
]
keywords = ["excel", "xlsx", "xlsm", "cli", "spreadsheet", "openpyxl", "agent", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Typing :: Typed",
]
dependencies = [
    "openpyxl>=3.1",
    "typer>=0.12",
    "pydantic>=2.0",
    "orjson>=3.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "portalocker>=2.8",
    "xxhash>=3.4",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.98",
]

[project.urls]
Homepage = "https://github.com/ThomasRohde/xl-cli"
Repository = "https://github.com/ThomasRohde/xl-cli"
Issues = "https://github.com/ThomasRohde/xl-cli/issues"

[project.scripts]
xl = "xl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/xl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
